== master

* Fix states not being drawn in GraphViz graphs in the correct order
* Add nicely formatted #inspect for states and events
* Simplify machine context-switching
* Store events/states in enumerable node collections
* No longer allow subclasses to change the integration
* Move fire! action logic into the Event class (no longer calls fire action on the object)
* Allow states in subclasses to have different values
* Recommend that all states be referenced as symbols instead of strings
* All states must now be named (and can be associated with other value types)
* Add support for customizing the actual stored value for a state
* Add compatibility with Ruby 1.9+

== 0.4.3 / 2008-12-28

* Allow dm-observer integration to be optional
* Fix non-lambda callbacks not working for DataMapper/Sequel

== 0.4.2 / 2008-12-28

* Fix graphs not being drawn the same way consistently
* Add support for sharing transitions across multiple events
* Add support for state-driven behavior
* Simplify initialize hooks, requiring super to be called instead
* Add :namespace option for generated state predicates / event methods

== 0.4.1 / 2008-12-16

* Fix nil states not being handled properly in guards, known states, or visualizations
* Fix the same node being used for different dynamic states in GraphViz output
* Always include initial state in the list of known states even if it's dynamic
* Use consistent naming scheme for dynamic states in GraphViz output
* Allow blocks to be directly passed into machine class
* Fix attribute predicates not working on attributes that represent columns in ActiveRecord

== 0.4.0 / 2008-12-14

* Remove the PluginAWeek namespace
* Add generic attribute predicate (e.g. "#{attribute}?(state_name)") and state predicates (e.g. "#{state}?")
* Add Sequel support
* Fix aliasing :initialize on ActiveRecord models causing warnings when the environment is reloaded
* Fix ActiveRecord state machines trying to query the database on unmigrated models